--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-PORT=3000
-DB_PATH=/data/companies.db
+PORT=10000
+DB_PATH=companies.db
+DATABASE_URL=postgresql://lia_crm_db_user:4JTlSLLoiYURJqHBMm0wMFLXluPHeYBz@dpg-d0k9rgffte5s738ggn20-a/lia_crm_db
