--- a/server/package.json
+++ b/server/package.json
@@ -1,14 +1,17 @@
 {
   "name": "lia-crm-backend",
   "version": "1.0.0",
+  "type": "module",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
     "cors": "^2.8.5",
-    "pg": "^8.11.3"
+    "dotenv": "^16.5.0",
+    "express": "^4.18.2",
+    "pg": "^8.16.0"
   },
   "engines": {
     "node": "18.x"
